--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -11,7 +11,7 @@
 \RequirePackage[scale=.85]{FiraMono}
 %  \renewcommand*\familydefault{\ttdefault} %% Only if the base font of the document is to be typewriter style
 \RequirePackage[T1]{fontenc}
-%\RequirePackage{multicol}
+\RequirePackage{multicol}
 %\RequirePackage{environ}
 \RequirePackage{lettrine}
 \RequirePackage{mathtools}
