--- a/aFirstStepInXimera.tex
+++ b/aFirstStepInXimera.tex
@@ -1,22 +1,18 @@
 \documentclass{xourse}
-
-\input{preamble.tex} %% Loads the graphics path
-
+\input{preamble} %% Loads the graphics path
 \author{Wim Obbels \and Bart Snapp}
 \title{A First Step in Ximera}
-
 \begin{document}
 \begin{abstract}
-    A simple collection of Ximera activities, to be deployed online.
+    A simple collection of Ximera activities, 
+    to be deployed online.
 \end{abstract}
 \maketitle
-
-\activity{basics/basicWorksheet.tex}
-\activity{basics/graphicsInteractives.tex}
+\activity{basics/basicWorksheet}
+\activity{basics/graphicsInteractives}
 \practice{exercises/answer}
 \practice{exercises/multipleChoice}
 \practice{exercises/selectAll}
 \practice{exercises/wordChoice}
 \practice{exercises/hintsAndFollowUp}
-\practice{exercises/demo}
 \end{document}
