--- a/ximeraUserManual/coverArt/frontCover.tex
+++ b/ximeraUserManual/coverArt/frontCover.tex
@@ -5,11 +5,13 @@
 \definecolor{bkgndcr}{rgb}{1,1,1}
 \definecolor{txtcr}{rgb}{0,0,0}
 \ifcolor
+
 \definecolor{bkgndcr}{RGB}{50,100, 255}
 \definecolor{bkgndcr}{RGB}{10,100, 50}
-% \definecolor{bkgndcr}{RGB}{60,60, 60}
+\definecolor{bkgndcr}{RGB}{60,60, 60}
 % \definecolor{bkgndcr}{RGB}{255,255, 100}
 \definecolor{txtcr}{RGB}{255, 100, 255}
+\definecolor{txtcr}{RGB}{255,255, 100}
 \fi
 \let\othermaketitle\maketitle
 \renewcommand{\maketitle}{
