--- a/ximeraUserManual/manual.sty
+++ b/ximeraUserManual/manual.sty
@@ -8,7 +8,7 @@
 \RequirePackage[landscape,includehead,includefoot,margin=2.5cm,headheight=1cm]{geometry}
 \RequirePackage{stix2}
 \RequirePackage{gillius}
-\RequirePackage[scale=.85]{FiraMono}
+\RequirePackage[scale=.8]{FiraMono}
 %  \renewcommand*\familydefault{\ttdefault} %% Only if the base font of the document is to be typewriter style
 \RequirePackage[T1]{fontenc}
 \RequirePackage{multicol}
@@ -30,10 +30,21 @@
 \qrset{height=1cm}
 
 
-
-
-%\renewcommand{\date}[1]{\def\thedate{#1}}
-%\newcommand{\thedate}{}
+\newcommand{\MONTH}{%
+  \ifcase\the\month
+  \or January% 1
+  \or February% 2
+  \or March% 3
+  \or April% 4
+  \or May% 5
+  \or June% 6
+  \or July% 7
+  \or August% 8
+  \or September% 9
+  \or October% 10
+  \or November% 11
+  \or December% 12
+  \fi}
 
 
 % Frame Environment
@@ -51,7 +62,7 @@
   topline=false,
   bottomline=false,
   leftline=true,
-  rightline=false, 
+  rightline=false,
   leftmargin=0,
   innertopmargin=0pt,
   innerbottommargin=0pt,
@@ -85,7 +96,7 @@
     %% M
     \begin{scope}[xshift=19.5cm]
     \draw[line width=2.5cm, smooth, rounded corners=1cm]
-    (0,0) -- (0,10.75)%% 
+    (0,0) -- (0,10.75)%%
     --(3.5,10.75) % width of top
     --(6.5,1.25)--(8.5,1.25)
     --(11.5,10.75)
@@ -113,7 +124,7 @@
   \end{scope}
   %\draw[step=1cm,gray,very thin] (0,0) grid (71,10);
 \end{tikzpicture}}%
-\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill  \thedate \\[-.1cm]
+\resizebox{!}{.7em}{\lsstyle User\,Manual}\hfill \MONTH~\thedate \\[-.1cm]
 \rule{\textwidth}{.1cm}\\[0cm]\rmfamily
 Email:~{\tt ximera@math.osu.edu} \hfill Website:~{\tt https://github.com/ximeraProject/}
 }
