--- a/ximeraUserManual/printing/printing.tex
+++ b/ximeraUserManual/printing/printing.tex
@@ -33,5 +33,16 @@ effects are only seen in the PDF:
 
 GIVE EXAMPLES OF COMBOS OF THESE AND WHAT THEY DO
 
+\section{The preamble versus printing styles}
+
+The preamble is used to make the Ximera document compile.
+
+The printing style is used to make cosmetic changes to the PDF.
+
+
+
+\section{When and how to use \texttt{prompt}}
+
+
 
 \end{document}
