--- a/ximeraUserManual/ximeraUserManual.tex
+++ b/ximeraUserManual/ximeraUserManual.tex
@@ -16,7 +16,7 @@
 \newcommand{\xfgURL}{https://go.osu.edu/ximera-flash-grant}
 
 \colorfalse
-\colortrue
+%\colortrue
 
 \pdfOnly{\input{coverArt/frontCover.tex}}
 
