--- a/basics/basicWorksheet.tex
+++ b/basics/basicWorksheet.tex
@@ -90,7 +90,7 @@ Finally we can include pictures using \verb|includegraphics|. Here's an example 
 \begin{question}
     Here is a picture of the Ximera Octolion:
     \begin{center}
-        \includegraphics[width=2in]{missionPatch.jpg}
+        \includegraphics[width=5cm]{missionPatch.jpg}
     \end{center}
     What's their name?
     \[
