--- a/ximeraUserManual/exerciseBanks/exerciseBanks.tex
+++ b/ximeraUserManual/exerciseBanks/exerciseBanks.tex
@@ -9,7 +9,13 @@ We can make exercise banks.
 \end{abstract}
 \maketitle
 
+Exercise banks can be made with \verb!xourse! files. 
 
+With no title
+
+With a title
+
+Within a course
 
 
 
