--- a/ximeraUserManual/workflow/workflow.tex
+++ b/ximeraUserManual/workflow/workflow.tex
@@ -13,13 +13,36 @@
 
 
 
-\section{Visual Studio Code and Docker}
-
-\LaTeX\ Extensions
+\section{Docker}
 
 
 
-\section{Files and the repository}
+\section{Visual Studio Code}
+Commands like \verb!Ctrl-~! and \verb!Ctrl-p! \verb!Ctrl-Shift-p!
+
+Docker commands like
+\verb!docker ps!
+
+\subsection{Extensions for Visual Studio Code}
+
+\LaTeX
+
+git
+
+docker
+
+markdown
+
+
+
+GitHub and ssh
+
+Convert https repo to ssh repo
+
+
+
+
+\section{Using \texttt{git}}
 
 All files need to be commited to the GitHub repository.
 Now return to the terminal window, which should still be in the
