--- a/ximeraUserManual/preamble.tex
+++ b/ximeraUserManual/preamble.tex
@@ -15,7 +15,17 @@
 }
 
 
+
 % Custom Commands
+
+
+%% These may change and should be checked! 
+\newcommand{\docURL}{\url{https://github.com/ximeraProject/ximeraFirstSteps/ximeraUserManual}}
+\newcommand{\testURL}{\url{https://github.com/ximeraProject/tests}}
+\newcommand{\experimentalURL}{\url{https://github.com/ximeraProject/experimental}}
+\newcommand{\xfsURL}{https://go.osu.edu/xfs}
+\newcommand{\xfgURL}{https://go.osu.edu/ximera-flash-grant}
+
 \newcommand{\event}[1]{\def\theevent{#1}}
 \newcommand{\theevent}{}
 
